fix: add overflow auto to bodyContainer to account for scrolling for fullscreen behavior

--- a/components/bibtemplate/src/styles/style.scss
+++ b/components/bibtemplate/src/styles/style.scss
@@ -49,6 +49,7 @@
   }
 
   #bodyContainer {
+    overflow: auto;
     margin-top: var(--ds-size-100, #{vac.$ds-size-100});
   }
 }
